--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
     <meta property="og:title" content="동아리 NALSSAM 지원하기">
     <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
-    <meta property="og:url" content="https://www.nalssam.com" />
     <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
+    <meta property="og:url" content="https://www.nalssam.com" />
     <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
-    <link rel="stylesheet" type="text/css" href="css/sw.css" />
+    <link rel="stylesheet" type="text/css" href="css/hw.css" />
     <title>NALSSAM</title>
     <style>
       @font-face {
@@ -235,9 +235,9 @@
     <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
-    <input type="hidden" id="anPageName" name="page" value="sw" />
+    <input type="hidden" id="anPageName" name="page" value="hw" />
     <div class="container-center-horizontal">
-      <div class="sw screen">
+      <div class="hw screen">
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
@@ -250,57 +250,69 @@
           </div>
           <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
-        <div class="group-3-C61RwL">
-          <div class="top-word-hvAGCq">
-            <div class="nalssam-sw-syxq48 sdsemi24">NALSSAM에는 항상 SW노예 필요합니다</div>
-            <div class="x-syxq48 thebig">혁신이 바탕이 되는 업무.<br />마법과도 같은 경험.</div>
+        <div class="group-4-C61RwL">
+          <div class="top-word-KOsP6k">
+            <div class="deep-hard-bgXmIs sdsemi24">Deep하고 Hard한 노예 모집</div>
+            <div class="textlabel-bgXmIs thebig">당신의 아이디어가 현실이 되기<br />더할 나위 없이 좋은 곳.</div>
           </div>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
             target="_blank"
           >
-            <div class="button-hvAGCq"><div class="textlabel-1gKIut newstyle">지원하기</div></div></a
+            <div class="button-KOsP6k"><div class="textlabel-m8aA7s ji1style">지원하기</div></div></a
           >
         </div>
-        <div class="img0054-C61RwL"></div>
-        <div class="textlabel-C61RwL newnew">소프트웨어의 융합과 응용을 통한 실전 경험을 쌓을 수 있는 날샘의 SW팀</div>
-        <div class="view-VMr6Om">
-          <div class="img0058-3-5l5ivn"></div>
-          <div class="na-5l5ivn with-nalssam">당신이 꿈꾸는 모든것이 현실로.<br />NALSSAM과 함께.</div>
+        <div class="x300-C61RwL sizes">“다 있다, 300여만원 상당의 피지컬 컴퓨팅 부품”</div>
+        <div class="group-3-C61RwL">
+          <div class="x2-hvAGCq"></div>
+          <div class="textlabel-hvAGCq thebigwhite">“대전대신고등학교 최고의</div>
+          <div class="textlabel-NSHvE3 thebigwhite">하드웨어 장비와 시설”</div>
         </div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-sdxwGy" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-kTiyrb" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <img class="line-5-GE0XEQ" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
-          <div class="textlabel-sdxwGy sd36">대신고 인공지능 선두 동아리</div>
-          <div class="image-classification-zUixHA sdmedium24">
-            Image Classification을 이용한 병충해 분류 인공지능 및 다양한 프로젝트를 개발하며 인공지능 선두로 동아리로
-            발전함. 데이터 크리에이터 캠프 등 다양한 인공지능 프로그램에 참여하여 실전 개발 경험을 쌓아갈 수 있다. 식물
-            병충해 분류, 쓰레기 인식 및 처리, 마스크 Detection, 인공지능 비서 등을 개발하고 Image Classification, Object
-            Detection, 자연어처리, TTS , LSTM 신경망 등의 분야를 배우고 다루어 인공지능의 실전 개발 프로젝트에 참여한다.
-          </div>
-          <div class="textlabel-kTiyrb sd36">당신의 꿈을 만드는 피지컬 컴퓨팅</div>
+          <img class="line-5-zUixHA" src="img/hw-line-5-CE155865-0906-4845-B62C-7BCDEC8434E9.png" />
+          <img class="line-5-sdxwGy" src="img/hw-line-5-CE155865-0906-4845-B62C-7BCDEC8434E9.png" />
+          <img class="line-5-kTiyrb" src="img/hw-line-5-CE155865-0906-4845-B62C-7BCDEC8434E9.png" />
+          <img class="line-5-GE0XEQ" src="img/hw-line-5-CE155865-0906-4845-B62C-7BCDEC8434E9.png" />
+          <div class="textlabel-sdxwGy sd36">피지컬 컴퓨팅</div>
           <div class="hw-zUixHA sdmedium24">
-            HW팀과 함께 아두이노, 라즈베리 파이 등의 피지컬 컴퓨팅을 활용하여 문제해결을 위한 개발을 진행한다.
-            <br />Hardware 팀의 개발 제품을 운영하며 SW 기술을 개발하고 구현한다. 넘치는 예산과 피지컬 컴퓨팅 부품을
-            활용하여 제한 받지 않고 꿈과 아이디어를 펼칠 수 있다.
+            날샘 HW 팀에서는 아두이노와 라즈베리 파이를 이용한 수많은 프로젝트를 진행하며 다양한 센서와 <br />출력을
+            이용한 작품과 시스템 제작한다. 300만원 상당의 아두이노 부품을 보유하여 이를 바탕으로 <br />창의적인
+            아이디어를 현실화할 수 있다.
           </div>
-          <div class="ap-ps-zUixHA sd36">APPs</div>
-          <div class="android-studio-zUixHA sdmedium24">
-            Android Studio를 사용한 앱 개발을 통한 산출물을 제작한다. 앱을 통한 서비스와 인공지능 운영 등 <br />다양한
-            분야의 앱을 다루며 앱 개발에 대한 지식과 경험을 쌓을 수 있다. 병충해 이미지 분석 앱 <br />캡칭플랜츠 등
-            다양한 앱을 개발했으며 날샘의 디자이너 등과 함께 일할 수 있다.
+          <div class="textlabel-kTiyrb sd36">피지컬 컴퓨팅과 인공지능</div>
+          <div class="hw-sdxwGy sdmedium24">
+            단순한 인공지능이 아닌 HW에서의 인공지능 프로젝트. 현실의 문제를 해결하기 위한 인공지능 기술을 <br />배우고
+            개발시키며 SW/HW의 융합적 역량을 키우며 개발한 프로젝트.<br /><br />ex) 라즈베리 파이와 카메라 센서를 이용한
+            Computer Vision 인공지능.
           </div>
-          <div class="h1-webs-h1-zUixHA sd36">&lt;h1&gt; Webs &lt;/h1&gt;</div>
+          <div class="x3-d-zUixHA sd36">3D 모델링</div>
+          <div class="fusion-360-3-d-zUixHA sdmedium24">
+            Fusion 360을 이용한 3D 모델링. 여러분의 아이디어와 날샘의 프로젝트를 3D 모델링하고 4대의 날샘<br />Ender-3D
+            프린터로 현실화하다.
+          </div>
+          <div class="x2020-hard-ware-slav-zUixHA sd36">2020년도 HardWare Slave가 진행한 ProJ</div>
           <div class="x-zUixHA sdmedium24">
-            지금 네가 보는 웹사이트, 날샘 손수 처음부터 만든거야. 어때?<br /><br />창업 아이템 판매 사이트 운영 및 관리,
-            웹사이트 디자인과 프론트 엔드 디자인, 백엔드 디자인, <br />서버 호스팅을 다루며 웹 개발에 대한 실전 경험을
-            쌓을 수 있다.
+            - 아두이노 로봇팔<br />
+            - 무드 등 키트<br />
+            - 스마트 화분<br />
+            - 수경 재배기
           </div>
         </div>
+        <div class="x00000-C61RwL"></div>
         <div class="stacked-group-C61RwL">
+          <div class="group-15-SHDHHB">
+            <div class="nalssam-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              NALSSAM의 프로젝트<br />
+            </div>
+            <div class="a-stair-bplant-box-kxhp4v sdidontknow">
+              a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
+              기반 체온 측정 키트<br />.<br />.<br />.<br />그리고 당신의 아이디어
+            </div>
+            <div class="x2021-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              2021년도를<br />위한<br />프로젝트 계획
+            </div>
+          </div>
           <div class="bar-SHDHHB">
             <div class="footer-fNGuiB">
               <div class="group-i7hrr4">
@@ -321,47 +333,37 @@
               <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
             </div>
           </div>
-          <div class="group-15-SHDHHB">
-            <div class="nalssam-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
-              NALSSAM의 프로젝트<br />
-            </div>
-            <div class="a-stair-bplant-box-kxhp4v sdidontknow">
-              a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
-              기반 체온 측정 키트<br />.<br />.<br />.<br />그리고 당신의 아이디어
-            </div>
-            <div class="x2021-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
-              2021년도를<br />위한<br />프로젝트 계획
-            </div>
-          </div>
         </div>
         <div class="group-6-C61RwL">
           <div class="stacked-group-PIEh7b">
             <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
-            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <img class="line-2-6NpaO9" src="img/hw-line-2-AF4C9396-38B8-46AA-B5ED-9962282C882C@2x.png" />
             <a href="bm.html"
               ><img
                 class="x00002-6NpaO9"
-                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
+                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-073BD4ED-DF81-4618-A085-CDBE6FE79D23@2x.png"
             /></a>
-            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <img class="line-3-6NpaO9" src="img/hw-line-2-AF4C9396-38B8-46AA-B5ED-9962282C882C@2x.png" />
             <a href="hw.html"
               ><img
                 class="x00001-6NpaO9"
-                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
+                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-D20009F7-ED27-46A7-870F-5E1E4BF06766@2x.png"
             /></a>
-            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <img class="line-3-D4WyEx" src="img/hw-line-2-AF4C9396-38B8-46AA-B5ED-9962282C882C@2x.png" />
             <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
-            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <img class="line-3-VX9NFJ" src="img/hw-line-2-AF4C9396-38B8-46AA-B5ED-9962282C882C@2x.png" />
             <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
-            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <img class="line-3-e8LPZY" src="img/hw-line-2-AF4C9396-38B8-46AA-B5ED-9962282C882C@2x.png" />
             <a href="a404.html">
               <div class="more00000-6NpaO9">
                 <a href="a404.html" onclick="window.event.stopPropagation()"
-                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
+                  ><img class="more00000-V9ZBCi" src="img/hw-more00000-48CAEEA5-CFB7-438C-B721-9CEFEE817A2C@2x.png"
                 /></a></div
             ></a>
           </div>
         </div>
+        <div class="sw-C61RwL littleabout">HW 지원</div>
+        <img class="x2-C61RwL" src="img/sw-ub77cuc778-2-uc544ub798-03DBC54A-26CE-41EB-9027-416423156EF2.png" />
       </div>
     </div>
   </body>
