--- a/src/main/resources/templates/a404.html
+++ b/src/main/resources/templates/a404.html
@@ -8,7 +8,7 @@
     <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
     <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
+    <meta property="og:url" content="https://www.nalssam.com" />
     <link rel="stylesheet" type="text/css" href="css/a404.css" />
     <title>NALSSAM</title>
     <style>
@@ -28,7 +28,7 @@
         font-family: "AppleSDGothicNeo-Light";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-SemiBold";
@@ -40,7 +40,7 @@
         font-family: "AppleSDGothicNeo-Heavy";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Regular";
@@ -58,14 +58,15 @@
         font-family: "AppleSDGothicNeo-UltraLight";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Medium";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("opentype");
       }
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -241,37 +242,11 @@
         <div class="group-C61RwL">
           <div class="x4-NOXmfT">4</div>
           <div class="x4-E582nk">4</div>
-          <img class="ghost-NOXmfT" src="img/404-ghost-056E3D3E-406A-48AB-A5A3-22207B660FB6@2x.png" />
+          <img class="ghost-NOXmfT" src="img/404-ghost-3C0FF39D-399D-4BA7-A9BF-A8DD48DBC56F@2x.png" />
         </div>
-        <div class="view-C61RwL">
-          <div class="navbar-UOcbxe">
-            <div class="hr-dIx87p"></div>
-            <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div>
-          </div>
-          <div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div>
-        </div>
-        <div class="bar-C61RwL">
-          <div class="footer-enIJlq">
-            <div class="group-ZXviDO">
-              <div class="vr-mmDlSt"></div>
-              <div class="vr-copy-mmDlSt"></div>
-              <div class="textlabel-mmDlSt hw-little-fonts">동아리 실 위치</div>
-              <div class="x1-mmDlSt hw-little-fonts">실험동 1층 유도실 옆</div>
-              <div class="x010-8402-2173-mmDlSt hw-little-fonts">인사팀 문의 010 8402 2173</div>
-            </div>
-            <div class="vr-copy-ZXviDO"></div>
-            <div class="x010-29-ZXviDO hw-little-fonts">날샘 문의사항 대표연락처(010 2997 9675)</div>
-            <div class="hr-ZXviDO"></div>
-            <div class="hr-Ij0EpA"></div>
-            <div class="nalssam-ZXviDO hw-little-fonts">
-              NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
-            </div>
-            <div class="x-ZXviDO hw-little-fonts">날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘</div>
-            <div class="nalssam-Ij0EpA hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
-          </div>
-        </div>
+        <div class="view-C61RwL"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></div>
         <div class="x2-C61RwL aboutnalssam">개발자는 잡니다 ㅂ2</div>
-        <img class="ester-egg-C61RwL" src="img/404-esteregg-169B188B-4A36-4AC8-BC69-5DEC68563386@2x.png" />
+        <img class="ester-egg-C61RwL" src="img/404-esteregg-41FB2DC6-A270-48AD-97B2-C9954EC81F92@2x.png" />
       </div>
     </div>
   </body>
