--- a/src/main/resources/templates/bm.html
+++ b/src/main/resources/templates/bm.html
@@ -8,7 +8,7 @@
     <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
     <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
+    <meta property="og:url" content="https://www.nalssam.com" />
     <link rel="stylesheet" type="text/css" href="css/bm.css" />
     <title>NALSSAM</title>
     <style>
@@ -28,7 +28,7 @@
         font-family: "AppleSDGothicNeo-Light";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-SemiBold";
@@ -40,7 +40,7 @@
         font-family: "AppleSDGothicNeo-Heavy";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Regular";
@@ -58,14 +58,15 @@
         font-family: "AppleSDGothicNeo-UltraLight";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Medium";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("opentype");
       }
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -247,75 +248,58 @@
               <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
             >
           </div>
-          <a href="mainpage.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
+          <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
-        <div class="bm-C61RwL littleabout">BM 노예 지원</div>
-        <img class="x2-C61RwL" src="img/bm-ub77cuc778-2-uc544ub798-8DF41F25-AA87-4831-B23D-3E316715B340.png" />
-        <div class="top-word-C61RwL">
-          <div class="textlabel-RyCdLg sdsemi24">당신의 창업 커리어를 위한 동아리</div>
-          <div class="nalssam-bm-RyCdLg thebig">NALSSAM이 존재하는 이유<br />BM팀을 소개합니다.</div>
+        <div class="group-5-C61RwL">
+          <div class="top-word-iZjIT4">
+            <div class="textlabel-zHR6Gl sdsemi24">당신의 창업 커리어를 위한 동아리</div>
+            <div class="results-will-show-yo-zHR6Gl thebig">Results will show you.<br />BM팀을 소개합니다.</div>
+          </div>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
             target="_blank"
           >
-            <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div></a
+            <div class="button-iZjIT4"><div class="textlabel-R1C2ex newstyle">지원하기</div></div></a
           >
         </div>
         <div class="x1-C61RwL"></div>
-        <div class="bm-VMr6Om sizes">
-          BM팀은 동아리의 내부와 외부의 업무를 다중적으로 맡는 동아리에 가장 영향력있는 동아리 입니다. <br />보통 동아리
-          활동 예산서, 동아리 경영, 창업PR, 날포지엄과 같은 동아리의 아이디어와 업무를 서포트하고 진행시키는 것이 이
-          팀의 주요 업무입니다.<br />
-          BM팀은 거의 모든 동아리의 외부대회에 참가하며 대회계획을 짜고 지원금과 상금을 관리합니다. 물론, 실적도
-          대단하죠.<br />
-          계획서 또는 예산서를 주로 쓰기 때문에 화려한 글을 쓰는 능력자들이 대다수이고 다른 팀에 비해 업무가 많은 편에
-          속하기 때문에 동아리의 능력자들이 많은 팀이기도 합니다. <br />많은 동아리 원이 가고 싶어하는 팀이며 가장
-          회의에 많이 참여하는 팀입니다. 동아리 활동에 참여가 많은 만큼 열정이 많은 학생에게 딱 어울리는 팀입니다.
+        <div class="x-C61RwL newnew">
+          동아리 예산관리, 부서 경영 등 동아리의 업무를 다중적으로 담당하며 다른 팀들에 비해 높은 업무 강도를
+          자랑합니다. 각 팀과 연계하여 프로젝트를 서포트하고 진행시키고, <br />동아리내 높은 영향력을 미치고 있어
+          개개인의 역량이 매우 중요하죠. 뜨거운 열정과 리더십을 가지고 다재 다능한 인재가 되고자 하는 학생에게 어울리는
+          팀입니다.
         </div>
         <div class="img0074-C61RwL"></div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-sdxwGy" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-kTiyrb" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <div class="textlabel-sdxwGy sd36">외부 대회</div>
+          <img class="line-5-zUixHA" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-sdxwGy" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-kTiyrb" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <div class="textlabel-sdxwGy sd36">기획을 현실로 만들수 있을 정도의 영향력</div>
           <div class="group-3-zUixHA">
-            <div class="bm-iMKsSw sdmedium24">
-              BM팀 활동의 꽃은 역시 외부대회입니다. 수많은 외부 대회 및 활동을 진행하며, 수상 실적역시 대단합니다.
-              <br />그 중에서 유명한 수상실적이 있다면 2020 300 부총리겸 교육부 장관 인증서 수여, 2020 어·아·창 비대면
-              <br />모의 창업경진대회, 2020 대한민국 청소년 온라인 창업경진대회와 같은 대회에서 수상했습니다. <br />또한
-              동아리의 살이 되는 대회 지원금을 꾸준히 공급하기 위해 기획서부터 팀원 배정을 도맡습니다.
-              <br />내부적으로는 2020 비즈쿨페스티벌 참가 및 체험 부스 운영을 전담했으며 데모데이 등의 비즈쿨 활동을
-              <br />진행했습니다. 자신의 열정이 넘쳐 해소하고 싶거나 워커홀릭의 기질을 갖고계신 학생 여러분,
-              축하합니다!<br />날샘으로 향하는 길이 열렸습니다.
+            <div class="textlabel-iMKsSw sdmedium24">
+              눈부신 수상과 활동 실적으로 유명한 Nalssam BM팀은 이미 능력이 보장된 동아리입니다. 이미 BM팀이
+              <br />기획한 많은 활동들이 실현되었죠. 당신이 기획한 프로젝트가 교내에서 실현되는 것을 목격하세요.
             </div>
-            <div class="textlabel-iMKsSw sd36">외부 대회</div>
           </div>
           <div class="group-4-zUixHA">
-            <div class="bm-Ylg7MA sdmedium24">
-              BM팀은 동아리의 창업 활동의 주체입니다. 창업대회와 창업활동 혹은 1년 프로젝트와 같은 주요 활동을
-              <br />기획하고 2020년에는 인공지능을 활용한 기술창업 아이템 &#39;캡칭 플랜츠&#39;로 모의 크라운드 펀딩,
-              온라인 <br />쇼핑몰 개설을 진행했습니다. 창업에 관심이 있는 여러 팀원들이 대다수이며 올해 법인 설립 또는
-              개인 <br />사업자 등록을 위해 갖은 노력을 다하는 중입니다. 창업 아이디어 구상, 아이템 구체화와 이후
-              창업기획서 <br />작성은 모두 BM팀의 역할입니다. 창업에 진심인 워커홀릭 아이디어 뱅크들을 환영합니다!
+            <div class="bm-nalssam-Ylg7MA sdmedium24">
+              BM팀은 Nalssam 창업 활동의 주체입니다. 개인의 소중한 아이디어를 검토하고 채택된 아이디어로 창업
+              <br />활동을 진행하죠. 2020년에는 인공지능 기술을 활용한 APP &#39;캡칭플랜츠&#39;로 모의 크라우드 펀딩,
+              온라인 <br />쇼핑몰 개설 등을 진행했고, 2021에는 법인 설립, 개인 사업자 등록 등으로 실제 창업을 이루어
+              내겠다는 <br />원대한 계획을 진행중입니다. 당신의 아이디어로 창업을 하고 싶다면 Nalssam BM팀은 최선의
+              선택일 <br />것입니다.
             </div>
-            <div class="textlabel-Ylg7MA sd36">창업 활동</div>
+            <div class="textlabel-Ylg7MA sd36">아이디어의 실현 그 이상을 바라보다</div>
           </div>
           <div class="group-4-sdxwGy">
-            <div class="x2018-steam-re-xtVPWN sdmedium24">
-              2018 STEAM R&amp;E 일반분야 전국 50팀 선정 <br />2018 환경창업대전 환경창업동아리 전국 10팀 선정
-              <br />2019 고교ㆍ대학 연계 R&amp;E 금상 <br />2019 UNIST 슈퍼컴퓨팅캠프 KT상 수상<br />2019 부산ㆍ울산
-              안전 메이커톤 최우수상 <br />2019 청소년 발명가 프로그램(YIP) 선발 <br />장려상 2019 스마틴앱챌린지 전국
-              60팀 선정<br />가작상 2019 학생 창업유망팀 300 전국 300팀 선정<br />장관 수료증 2019 대한민국 청소년
-              창업경진대회 부총리겸 교육부 장관상 수상 <br />2020 꿈나무 과학 멘토 사업 - 화학 강의 &#34;화약 기술이
-              국가 운명을 좌우한다.&#34;<br />POSCO ICT 2020 AI Challenge 우수상&nbsp;&nbsp;수상 - (주)포스코 /
-              캡칭플랜츠 앱 제작 <br />2020 300 부총리겸 교육부 장관 인증서 / 캡칭 플랜츠 <br />2020 데이터 크리에이터
-              캠프 우수상 수상 - 한국 정보화진흥원 / 부동산 가치 예측 모델 <br />인공지능 실험 2020 어·아·창”비대면 모의
-              창업경진대회 창의혁신상 수상 <br />온라인 쇼핑몰 운영 2020 대한민국 청소년 온라인
-              창업경진대회&nbsp;&nbsp;우수상 수상<br />동아리 비즈쿨 활동 2020 국립중앙과학관 가을 사이언스데이 장려상 /
-              자석유체 및 자석 슬라임
+            <div class="nalssam-xtVPWN sdmedium24">
+              Nalssam의 주요 활동들의 처음과 끝은 BM팀 담당입니다. 각종 대회 상금과 동아리 지원금으로 각 팀을
+              <br />서포트 하며 활동 보고서, 예산서 작성 등 동아리 전반의 걸쳐서 운영에 참여하며 공동체 역량의 성장과
+              <br />업무처리 능력을 가지게 되는 것은 Nalssam BM팀의 기본입니다. BM팀에 발을 들이는 순간부터 당신은
+              <br />이미 인재가 된 셈이죠
             </div>
-            <div class="bm-xtVPWN sd36">BM팀 수상실적</div>
+            <div class="first-in-last-out-xtVPWN sd36">First in, Last out</div>
           </div>
         </div>
         <div class="stacked-group-C61RwL">
@@ -350,6 +334,34 @@
               <div class="x-i7hrr4 hw-little-fonts">날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘</div>
               <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
             </div>
+          </div>
+        </div>
+        <div class="group-6-C61RwL">
+          <div class="stacked-group-PIEh7b">
+            <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
+            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="bm.html"
+              ><img
+                class="x00002-6NpaO9"
+                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
+            /></a>
+            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="hw.html"
+              ><img
+                class="x00001-6NpaO9"
+                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
+            /></a>
+            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
+            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
+            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="a404.html">
+              <div class="more00000-6NpaO9">
+                <a href="a404.html" onclick="window.event.stopPropagation()"
+                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
+                /></a></div
+            ></a>
           </div>
         </div>
       </div>
