--- a/src/main/resources/templates/css/bm.css
+++ b/src/main/resources/templates/css/bm.css
@@ -1,10 +1,5 @@
 /* screen - bm */
 
-.-style {
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 199px;
-  letter-spacing: 0.00px;
-}
 .aboutnalssam {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
   font-size: 27px;
@@ -20,6 +15,11 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
+.applesdgothicneo-normal-caribbean-green-18px {
+  color: var(--caribbean-green);
+  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
+  font-size: 18px;
+}
 .asd {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
   font-size: 28px;
@@ -32,7 +32,7 @@
 }
 .bm {
   background-color: var(--white);
-  height: 4713px;
+  height: 4232px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
@@ -56,32 +56,7 @@
   position: relative;
   width: 1440px;
 }
-.bm .bm-C61RwL {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 600;
-  height: auto;
-  left: 257px;
-  line-height: 19px;
-  position: absolute;
-  text-align: left;
-  top: 67px;
-  white-space: nowrap;
-  width: auto;
-}
-.bm .bm-VMr6Om {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 600;
-  height: auto;
-  left: 232px;
-  line-height: 19px;
-  position: absolute;
-  text-align: center;
-  top: 1104px;
-  width: auto;
-}
-.bm .bm-Ylg7MA {
+.bm .bm-nalssam-Ylg7MA {
   background-color: transparent;
   color: var(--black);
   font-weight: 500;
@@ -93,19 +68,32 @@
   top: 58px;
   width: auto;
 }
-.bm .bm-iMKsSw {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 500;
-  height: auto;
-  left: 2px;
-  line-height: 29px;
+.bm .button-dIx87p {
+  background-color: var(--caribbean-green);
+  height: 24px;
+  left: 1067px;
   position: absolute;
-  text-align: left;
-  top: 58px;
-  width: auto;
+  top: 15px;
+  width: 123px;
 }
-.bm .bm-xtVPWN {
+.bm .button-iZjIT4 {
+  background-color: var(--caribbean-green);
+  height: 60px;
+  left: 135px;
+  position: absolute;
+  top: 166px;
+  width: 218px;
+}
+.bm .cr-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
+}
+.bm .first-in-last-out-xtVPWN {
   background-color: transparent;
   color: var(--black);
   font-weight: 700;
@@ -118,22 +106,6 @@
   white-space: nowrap;
   width: auto;
 }
-.bm .button-RyCdLg {
-  background-color: var(--caribbean-green);
-  height: 29px;
-  left: 202px;
-  position: absolute;
-  top: 171px;
-  width: 75px;
-}
-.bm .button-dIx87p {
-  background-color: var(--caribbean-green);
-  height: 24px;
-  left: 1067px;
-  position: absolute;
-  top: 15px;
-  width: 123px;
-}
 .bm .footer-fNGuiB {
   background-color: var(--eerie-black);
   height: 137px;
@@ -141,6 +113,15 @@
   position: relative;
   top: 0px;
   width: 1440px;
+}
+.bm .g-slave-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
 }
 .bm .group-15-SHDHHB {
   background: linear-gradient(180deg, #6DD400 0%, #F7B500 100%);
@@ -153,35 +134,51 @@
 }
 .bm .group-2-C61RwL {
   background-color: transparent;
-  height: 1464px;
-  left: 247px;
+  height: 986px;
+  left: 246px;
   position: absolute;
-  top: 2186px;
-  width: 946px;
+  top: 2248px;
+  width: 947px;
 }
 .bm .group-3-zUixHA {
   background-color: transparent;
-  height: 261px;
-  left: 12px;
+  height: 58px;
+  left: 14px;
   position: absolute;
-  top: 222px;
-  width: 935px;
+  top: 291px;
+  width: 905px;
 }
 .bm .group-4-sdxwGy {
   background-color: transparent;
-  height: 522px;
-  left: 14px;
+  height: 174px;
+  left: 15px;
   position: absolute;
-  top: 942px;
-  width: 837px;
+  top: 812px;
+  width: 907px;
 }
 .bm .group-4-zUixHA {
   background-color: transparent;
   height: 203px;
-  left: 14px;
+  left: 12px;
   position: absolute;
-  top: 611px;
-  width: 918px;
+  top: 479px;
+  width: 910px;
+}
+.bm .group-5-C61RwL {
+  background-color: transparent;
+  height: 226px;
+  left: 477px;
+  position: absolute;
+  top: 309px;
+  width: 489px;
+}
+.bm .group-6-C61RwL {
+  background-color: var(--bunker);
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 53px;
+  width: 1442px;
 }
 .bm .group-i7hrr4 {
   background-color: transparent;
@@ -217,20 +214,55 @@
 }
 .bm .img0074-C61RwL {
   background-color: transparent;
-  background-image: url(../img/bm-img0074-0F05B71F-6428-4D34-8F00-AE81B3B56A5B.png);
+  background-image: url(../img/bm-img0074-3A52D1A1-57ED-4FEF-A144-44DB2A52BD76.png);
   background-size: 100% 100%;
   height: 736px;
-  left: 0px;
+  left: -1px;
   position: absolute;
-  top: 1285px;
+  top: 1412px;
   width: 1440px;
+}
+.bm .line-2-6NpaO9 {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bm .line-3-6NpaO9 {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bm .line-3-D4WyEx {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bm .line-3-VX9NFJ {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bm .line-3-e8LPZY {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
 }
 .bm .line-5-kTiyrb {
   background-color: transparent;
   height: 4px;
-  left: 1px;
+  left: 3px;
   position: absolute;
-  top: 875px;
+  top: 745px;
   width: 944px;
 }
 .bm .line-5-sdxwGy {
@@ -238,7 +270,7 @@
   height: 4px;
   left: 0px;
   position: absolute;
-  top: 546px;
+  top: 412px;
   width: 944px;
 }
 .bm .line-5-zUixHA {
@@ -246,8 +278,23 @@
   height: 4px;
   left: 0px;
   position: absolute;
-  top: 155px;
+  top: 166px;
   width: 944px;
+}
+.bm .more00000-6NpaO9 {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 84px;
+}
+.bm .more00000-V9ZBCi {
+  background-color: transparent;
+  height: 32px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 84px;
 }
 .bm .nalssam-PZ5l3E {
   background-color: transparent;
@@ -275,18 +322,6 @@
   white-space: nowrap;
   width: auto;
 }
-.bm .nalssam-bm-RyCdLg {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 800;
-  height: auto;
-  left: -1px;
-  line-height: 57px;
-  position: absolute;
-  text-align: center;
-  top: 43px;
-  width: auto;
-}
 .bm .nalssam-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
@@ -312,6 +347,18 @@
   top: 86px;
   width: auto;
 }
+.bm .nalssam-xtVPWN {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 500;
+  height: auto;
+  left: 1px;
+  line-height: 29px;
+  position: absolute;
+  text-align: left;
+  top: 58px;
+  width: auto;
+}
 .bm .navbar-UOcbxe {
   background-color: var(--cod-gray);
   height: 53px;
@@ -320,6 +367,18 @@
   top: 0px;
   width: 1440px;
 }
+.bm .results-will-show-yo-zHR6Gl {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 800;
+  height: auto;
+  left: -1px;
+  line-height: 72px;
+  position: absolute;
+  text-align: center;
+  top: 22px;
+  width: auto;
+}
 .bm .stacked-group-C61RwL {
   align-items: center;
   background-color: transparent;
@@ -327,23 +386,31 @@
   flex-direction: column;
   height: auto;
   justify-content: flex-start;
-  left: -1px;
+  left: 0px;
   position: absolute;
-  top: 3815px;
+  top: 3334px;
   width: 1440px;
 }
-.bm .textlabel-3pqNxu {
+.bm .stacked-group-PIEh7b {
+  align-items: center;
   background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 6px;
-  line-height: 22px;
-  position: absolute;
-  text-align: center;
-  top: 3px;
-  white-space: nowrap;
-  width: 63px;
+  display: flex;
+  flex-direction: row;
+  height: 97px;
+  justify-content: flex-start;
+  left: 183px;
+  position: relative;
+  top: 23px;
+  width: auto;
+}
+.bm .sw-logo-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0;
+  position: relative;
+  width: 97px;
 }
 .bm .textlabel-63crYe {
   background-color: transparent;
@@ -371,18 +438,18 @@
   white-space: nowrap;
   width: auto;
 }
-.bm .textlabel-RyCdLg {
+.bm .textlabel-R1C2ex {
   background-color: transparent;
-  color: var(--black);
-  font-weight: 600;
+  color: var(--white);
+  font-weight: 800;
   height: auto;
-  left: 94px;
-  line-height: 29px;
+  left: 17px;
+  line-height: 22px;
   position: absolute;
   text-align: center;
-  top: 0px;
+  top: 17px;
   white-space: nowrap;
-  width: auto;
+  width: 184px;
 }
 .bm .textlabel-Ylg7MA {
   background-color: transparent;
@@ -400,14 +467,13 @@
 .bm .textlabel-iMKsSw {
   background-color: transparent;
   color: var(--black);
-  font-weight: 700;
+  font-weight: 500;
   height: auto;
-  left: 1px;
-  line-height: 43px;
+  left: 0px;
+  line-height: 29px;
   position: absolute;
   text-align: left;
   top: 0px;
-  white-space: nowrap;
   width: auto;
 }
 .bm .textlabel-sdxwGy {
@@ -419,7 +485,20 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 222px;
+  top: 233px;
+  white-space: nowrap;
+  width: auto;
+}
+.bm .textlabel-zHR6Gl {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 600;
+  height: auto;
+  left: 98px;
+  line-height: 29px;
+  position: absolute;
+  text-align: center;
+  top: 0px;
   white-space: nowrap;
   width: auto;
 }
@@ -428,21 +507,21 @@
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 125px;
-  line-height: 57px;
+  left: 44px;
+  line-height: 72px;
   position: absolute;
   text-align: center;
   top: 0px;
   white-space: nowrap;
   width: auto;
 }
-.bm .top-word-C61RwL {
+.bm .top-word-iZjIT4 {
   background-color: transparent;
-  height: 200px;
-  left: 480px;
+  height: 166px;
+  left: 0px;
   position: absolute;
-  top: 185px;
-  width: 480px;
+  top: 0px;
+  width: 488px;
 }
 .bm .view-C61RwL {
   background-color: transparent;
@@ -476,6 +555,18 @@
   top: 57px;
   width: 1px;
 }
+.bm .x-C61RwL {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 600;
+  height: auto;
+  left: 62px;
+  line-height: 27px;
+  position: absolute;
+  text-align: center;
+  top: 1298px;
+  width: auto;
+}
 .bm .x-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
@@ -488,6 +579,20 @@
   top: 56px;
   white-space: nowrap;
   width: auto;
+}
+.bm .x00001-6NpaO9 {
+  background-color: transparent;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
+}
+.bm .x00002-6NpaO9 {
+  background-color: transparent;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
 }
 .bm .x010-29-i7hrr4 {
   background-color: transparent;
@@ -517,12 +622,12 @@
 }
 .bm .x1-C61RwL {
   background-color: transparent;
-  background-image: url(../img/bm-1-12628C31-E865-4B48-9AE2-C9E2231F08F5.png);
+  background-image: url(../img/bm-1-4CD92F29-3166-4792-9129-6F4E844DF46C.png);
   background-size: 100% 100%;
   height: 595px;
   left: 0px;
   position: absolute;
-  top: 415px;
+  top: 639px;
   width: 1440px;
 }
 .bm .x1-D44yGU {
@@ -536,26 +641,6 @@
   text-align: left;
   top: 1px;
   white-space: nowrap;
-  width: auto;
-}
-.bm .x2-C61RwL {
-  background-color: transparent;
-  height: 1px;
-  left: 249px;
-  position: absolute;
-  top: 99px;
-  width: 942px;
-}
-.bm .x2018-steam-re-xtVPWN {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 500;
-  height: auto;
-  left: 1px;
-  line-height: 29px;
-  position: absolute;
-  text-align: left;
-  top: 58px;
   width: auto;
 }
 .bm .x2021-kxhp4v {
@@ -587,17 +672,7 @@
 }
 .ji1style {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 12px;
-}
-.littleabout {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 15px;
-  letter-spacing: -0.92px;
-}
-.littlefonts {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-  letter-spacing: 0.00px;
+  font-size: 18px;
 }
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
@@ -621,18 +696,17 @@
 }
 .nalssamlogoblack {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
-  font-size: 16px;
+  font-size: 21px;
   letter-spacing: 0.00px;
 }
-.sd12 {
-  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
-  font-size: 12px;
-  letter-spacing: 0.00px;
+.newnew {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 22px;
+  letter-spacing: -1.51px;
 }
-.sd13green {
-  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
-  font-size: 13px;
-  letter-spacing: -0.80px;
+.newstyle {
+  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
+  font-size: 24px;
 }
 .sd21green {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
@@ -674,11 +748,6 @@
   font-size: 48px;
   letter-spacing: 0.00px;
 }
-.sd60 {
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 60px;
-  letter-spacing: -3.48px;
-}
 .sdidontknow {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
   font-size: 36px;
@@ -706,13 +775,13 @@
 }
 .sizes {
   font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-  letter-spacing: -1.10px;
+  font-size: 18px;
+  letter-spacing: -1.24px;
 }
 .thebig {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 48px;
-  letter-spacing: -3.60px;
+  font-size: 60px;
+  letter-spacing: -4.50px;
 }
 .thebigwhite {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
@@ -724,13 +793,14 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
-.thesilk {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 24px;
-  letter-spacing: 0.00px;
+.with-nalssam {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 60px;
+  letter-spacing: -2.25px;
 }
 :root {
   --black: rgba(0,0,0,1.0);
+  --bunker: rgba(17,17,18,1.0);
   --caribbean-green: rgba(11,212,128,1.0);
   --cod-gray: rgba(10,10,10,1.0);
   --eerie-black: rgba(29,29,31,1.0);
