--- a/src/main/resources/templates/css/sw.css
+++ b/src/main/resources/templates/css/sw.css
@@ -1,10 +1,5 @@
 /* screen - sw */
 
-.-style {
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 199px;
-  letter-spacing: 0.00px;
-}
 .aboutnalssam {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
   font-size: 27px;
@@ -19,6 +14,11 @@
   font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
   font-size: 36px;
   letter-spacing: 0.00px;
+}
+.applesdgothicneo-normal-caribbean-green-18px {
+  color: var(--caribbean-green);
+  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
+  font-size: 18px;
 }
 .asd {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
@@ -47,17 +47,7 @@
 }
 .ji1style {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 12px;
-}
-.littleabout {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 15px;
-  letter-spacing: -0.92px;
-}
-.littlefonts {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-  letter-spacing: 0.00px;
+  font-size: 18px;
 }
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
@@ -81,18 +71,17 @@
 }
 .nalssamlogoblack {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
-  font-size: 16px;
+  font-size: 21px;
   letter-spacing: 0.00px;
 }
-.sd12 {
-  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
-  font-size: 12px;
-  letter-spacing: 0.00px;
+.newnew {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 22px;
+  letter-spacing: -1.51px;
 }
-.sd13green {
-  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
-  font-size: 13px;
-  letter-spacing: -0.80px;
+.newstyle {
+  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
+  font-size: 24px;
 }
 .sd21green {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
@@ -134,11 +123,6 @@
   font-size: 48px;
   letter-spacing: 0.00px;
 }
-.sd60 {
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 60px;
-  letter-spacing: -3.48px;
-}
 .sdidontknow {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
   font-size: 36px;
@@ -166,12 +150,12 @@
 }
 .sizes {
   font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-  letter-spacing: -1.10px;
+  font-size: 18px;
+  letter-spacing: -1.24px;
 }
 .sw {
   background-color: var(--white);
-  height: 4498px;
+  height: 4483px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
@@ -197,7 +181,7 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 888px;
+  top: 899px;
   width: auto;
 }
 .sw .ap-ps-zUixHA {
@@ -209,7 +193,7 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 830px;
+  top: 841px;
   white-space: nowrap;
   width: auto;
 }
@@ -221,14 +205,6 @@
   top: 731px;
   width: 1440px;
 }
-.sw .button-RyCdLg {
-  background-color: var(--caribbean-green);
-  height: 24px;
-  left: 170px;
-  position: absolute;
-  top: 171px;
-  width: 75px;
-}
 .sw .button-dIx87p {
   background-color: var(--caribbean-green);
   height: 24px;
@@ -237,6 +213,23 @@
   top: 15px;
   width: 123px;
 }
+.sw .button-hvAGCq {
+  background-color: var(--caribbean-green);
+  height: 60px;
+  left: 151px;
+  position: absolute;
+  top: 176px;
+  width: 218px;
+}
+.sw .cr-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
+}
 .sw .footer-fNGuiB {
   background-color: var(--eerie-black);
   height: 137px;
@@ -244,6 +237,15 @@
   position: relative;
   top: 0px;
   width: 1440px;
+}
+.sw .g-slave-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
 }
 .sw .group-15-SHDHHB {
   background: linear-gradient(180deg, #0018D4 0%, #F7B500 100%);
@@ -257,11 +259,27 @@
 }
 .sw .group-2-C61RwL {
   background-color: transparent;
-  height: 1279px;
-  left: 247px;
+  height: 1290px;
+  left: 249px;
   position: absolute;
-  top: 2186px;
+  top: 2240px;
   width: 946px;
+}
+.sw .group-3-C61RwL {
+  background-color: transparent;
+  height: 236px;
+  left: 460px;
+  position: absolute;
+  top: 309px;
+  width: 521px;
+}
+.sw .group-6-C61RwL {
+  background-color: var(--bunker);
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 53px;
+  width: 1442px;
 }
 .sw .group-i7hrr4 {
   background-color: transparent;
@@ -280,7 +298,7 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 1105px;
+  top: 1116px;
   white-space: nowrap;
   width: auto;
 }
@@ -317,8 +335,8 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 613px;
-  width: auto;
+  top: 624px;
+  width: 928px;
 }
 .sw .image-classification-zUixHA {
   background-color: transparent;
@@ -329,22 +347,22 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 280px;
-  width: auto;
+  top: 291px;
+  width: 927px;
 }
 .sw .img0054-C61RwL {
   background-color: transparent;
-  background-image: url(../img/sw-img0054-C2E51D7F-4C0F-4BD5-BD09-9EC6613392F7.png);
+  background-image: url(../img/sw-img0054-32122B38-0800-483A-8012-280A93E4CC67.png);
   background-size: 100% 100%;
   height: 595px;
   left: 0px;
   position: absolute;
-  top: 415px;
+  top: 647px;
   width: 1440px;
 }
 .sw .img0058-3-5l5ivn {
   background-color: transparent;
-  background-image: url(../img/sw-img0058-3-72D95D67-17F9-4CAF-87B4-22E9A67F0797.png);
+  background-image: url(../img/sw-img0058-3-0DB62B27-5B60-441C-A305-A0EC6252B823.png);
   background-size: 100% 100%;
   height: 736px;
   left: 0px;
@@ -352,12 +370,47 @@
   top: 0px;
   width: 1440px;
 }
+.sw .line-2-6NpaO9 {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.sw .line-3-6NpaO9 {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.sw .line-3-D4WyEx {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.sw .line-3-VX9NFJ {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.sw .line-3-e8LPZY {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
 .sw .line-5-GE0XEQ {
   background-color: transparent;
   height: 4px;
   left: 1px;
   position: absolute;
-  top: 488px;
+  top: 499px;
   width: 944px;
 }
 .sw .line-5-kTiyrb {
@@ -365,7 +418,7 @@
   height: 4px;
   left: 1px;
   position: absolute;
-  top: 1038px;
+  top: 1049px;
   width: 944px;
 }
 .sw .line-5-sdxwGy {
@@ -373,7 +426,7 @@
   height: 4px;
   left: 2px;
   position: absolute;
-  top: 763px;
+  top: 774px;
   width: 944px;
 }
 .sw .line-5-zUixHA {
@@ -381,19 +434,34 @@
   height: 4px;
   left: 0px;
   position: absolute;
-  top: 155px;
+  top: 166px;
   width: 944px;
+}
+.sw .more00000-6NpaO9 {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 84px;
+}
+.sw .more00000-V9ZBCi {
+  background-color: transparent;
+  height: 32px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 84px;
 }
 .sw .na-5l5ivn {
   background-color: transparent;
   color: var(--white);
   font-weight: 800;
   height: auto;
-  left: 450px;
-  line-height: 57px;
+  left: 379px;
+  line-height: 72px;
   position: absolute;
-  text-align: left;
-  top: 311px;
+  text-align: center;
+  top: 300px;
   width: auto;
 }
 .sw .nalssam-PZ5l3E {
@@ -414,7 +482,7 @@
   color: var(--white);
   font-weight: 800;
   height: auto;
-  left: 249px;
+  left: 248px;
   line-height: 17px;
   position: absolute;
   text-align: center;
@@ -447,12 +515,12 @@
   top: 86px;
   width: auto;
 }
-.sw .nalssam-sw-RyCdLg {
+.sw .nalssam-sw-syxq48 {
   background-color: transparent;
   color: var(--black);
   font-weight: 600;
   height: auto;
-  left: 33px;
+  left: 84px;
   line-height: 29px;
   position: absolute;
   text-align: center;
@@ -471,36 +539,44 @@
 .sw .stacked-group-C61RwL {
   background-color: transparent;
   height: 868px;
-  left: 0px;
+  left: 2px;
   position: absolute;
-  top: 3630px;
+  top: 3615px;
   width: 1440px;
 }
-.sw .sw-C61RwL {
+.sw .stacked-group-PIEh7b {
+  align-items: center;
   background-color: transparent;
-  color: var(--black);
-  font-weight: 600;
-  height: auto;
-  left: 257px;
-  line-height: 19px;
-  position: absolute;
-  text-align: left;
-  top: 67px;
-  white-space: nowrap;
+  display: flex;
+  flex-direction: row;
+  height: 97px;
+  justify-content: flex-start;
+  left: 183px;
+  position: relative;
+  top: 23px;
   width: auto;
 }
-.sw .textlabel-3pqNxu {
+.sw .sw-logo-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0;
+  position: relative;
+  width: 97px;
+}
+.sw .textlabel-1gKIut {
   background-color: transparent;
   color: var(--white);
   font-weight: 800;
   height: auto;
-  left: 6px;
+  left: 17px;
   line-height: 22px;
   position: absolute;
   text-align: center;
-  top: 1px;
+  top: 17px;
   white-space: nowrap;
-  width: 63px;
+  width: 184px;
 }
 .sw .textlabel-63crYe {
   background-color: transparent;
@@ -520,11 +596,12 @@
   color: var(--black);
   font-weight: 600;
   height: auto;
-  left: 477px;
-  line-height: 19px;
+  left: 438px;
+  line-height: 27px;
   position: absolute;
   text-align: center;
-  top: 1128px;
+  top: 1323px;
+  white-space: nowrap;
   width: auto;
 }
 .sw .textlabel-D44yGU {
@@ -549,7 +626,7 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 555px;
+  top: 566px;
   white-space: nowrap;
   width: auto;
 }
@@ -558,11 +635,11 @@
   color: var(--black);
   font-weight: 700;
   height: auto;
-  left: 13px;
+  left: 12px;
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 222px;
+  top: 233px;
   white-space: nowrap;
   width: auto;
 }
@@ -571,21 +648,21 @@
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 125px;
-  line-height: 57px;
+  left: 43px;
+  line-height: 72px;
   position: absolute;
   text-align: center;
   top: 0px;
   white-space: nowrap;
   width: auto;
 }
-.sw .top-word-C61RwL {
+.sw .top-word-hvAGCq {
   background-color: transparent;
-  height: 195px;
-  left: 512px;
+  height: 176px;
+  left: 0px;
   position: absolute;
-  top: 185px;
-  width: 417px;
+  top: 0px;
+  width: 520px;
 }
 .sw .view-C61RwL {
   background-color: transparent;
@@ -598,9 +675,9 @@
 .sw .view-VMr6Om {
   background-color: transparent;
   height: 736px;
-  left: 1px;
+  left: 0px;
   position: absolute;
-  top: 1285px;
+  top: 1433px;
   width: 1440px;
 }
 .sw .vr-D44yGU {
@@ -627,18 +704,6 @@
   top: 57px;
   width: 1px;
 }
-.sw .x-RyCdLg {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 800;
-  height: auto;
-  left: 0px;
-  line-height: 57px;
-  position: absolute;
-  text-align: center;
-  top: 43px;
-  width: auto;
-}
 .sw .x-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
@@ -652,6 +717,18 @@
   white-space: nowrap;
   width: auto;
 }
+.sw .x-syxq48 {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 800;
+  height: auto;
+  left: -1px;
+  line-height: 72px;
+  position: absolute;
+  text-align: center;
+  top: 32px;
+  width: auto;
+}
 .sw .x-zUixHA {
   background-color: transparent;
   color: var(--black);
@@ -661,8 +738,22 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 1163px;
+  top: 1174px;
   width: auto;
+}
+.sw .x00001-6NpaO9 {
+  background-color: transparent;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
+}
+.sw .x00002-6NpaO9 {
+  background-color: transparent;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
 }
 .sw .x010-29-i7hrr4 {
   background-color: transparent;
@@ -703,14 +794,6 @@
   white-space: nowrap;
   width: auto;
 }
-.sw .x2-C61RwL {
-  background-color: transparent;
-  height: 1px;
-  left: 249px;
-  position: absolute;
-  top: 99px;
-  width: 942px;
-}
 .sw .x2021-kxhp4v {
   background-color: transparent;
   color: var(--white);
@@ -725,8 +808,8 @@
 }
 .thebig {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 48px;
-  letter-spacing: -3.60px;
+  font-size: 60px;
+  letter-spacing: -4.50px;
 }
 .thebigwhite {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
@@ -738,13 +821,14 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
-.thesilk {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 24px;
-  letter-spacing: 0.00px;
+.with-nalssam {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 60px;
+  letter-spacing: -2.25px;
 }
 :root {
   --black: rgba(0,0,0,1.0);
+  --bunker: rgba(17,17,18,1.0);
   --caribbean-green: rgba(11,212,128,1.0);
   --cod-gray: rgba(10,10,10,1.0);
   --eerie-black: rgba(29,29,31,1.0);
