--- a/src/main/resources/templates/hw.html
+++ b/src/main/resources/templates/hw.html
@@ -7,8 +7,8 @@
     <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
     <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
     <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
+    <meta property="og:url" content="https://www.nalssam.com" />
     <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" type="text/css" href="css/hw.css" />
     <title>NALSSAM</title>
     <style>
@@ -28,7 +28,7 @@
         font-family: "AppleSDGothicNeo-Light";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-SemiBold";
@@ -40,7 +40,7 @@
         font-family: "AppleSDGothicNeo-Heavy";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Regular";
@@ -58,14 +58,15 @@
         font-family: "AppleSDGothicNeo-UltraLight";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Medium";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("opentype");
       }
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -247,29 +248,34 @@
               <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
             >
           </div>
-          <a href="mainpage.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
+          <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
-        <div class="hw-C61RwL littleabout">HW 노예 지원</div>
-        <img class="x2-C61RwL" src="img/bm-ub77cuc778-2-uc544ub798-8DF41F25-AA87-4831-B23D-3E316715B340.png" />
-        <div class="top-word-C61RwL">
-          <div class="deep-hard-RyCdLg sdsemi24">Deep하고 Hard한 노예 모집</div>
-          <div class="textlabel-RyCdLg thebig">당신의 아이디어가 현실이 되기<br />더할 나위 없이 좋은 곳.</div>
+        <div class="group-5-C61RwL">
+          <div class="group-4-iZjIT4">
+            <div class="top-word-5FNhjl">
+              <div class="deep-hard-fOBZLO sdsemi24">Deep하고 Hard한 노예 모집</div>
+              <div class="textlabel-fOBZLO thebig">당신의 아이디어가 현실이 되기<br />더할 나위 없이 좋은 곳.</div>
+            </div>
+          </div>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
             target="_blank"
           >
-            <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div></a
+            <div class="button-iZjIT4"><div class="textlabel-R1C2ex newstyle">지원하기</div></div></a
           >
         </div>
-        <div class="x300-C61RwL sizes">“다 있다, 300여만원 상당의 피지컬 컴퓨팅 부품”</div>
-        <div class="x2-VMr6Om"></div>
-        <div class="textlabel-C61RwL thebigwhite">“대전대신고등학교 최고의 <br />하드웨어 장비와 시설”</div>
+        <div class="x300-C61RwL newnew">“다 있다, 300여만원 상당의 피지컬 컴퓨팅 부품”</div>
+        <div class="group-3-C61RwL">
+          <div class="x2-hvAGCq"></div>
+          <div class="textlabel-hvAGCq thebigwhite">“대전대신고등학교 최고의</div>
+          <div class="textlabel-NSHvE3 thebigwhite">하드웨어 장비와 시설”</div>
+        </div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-sdxwGy" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-kTiyrb" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-GE0XEQ" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-zUixHA" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-sdxwGy" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-kTiyrb" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-GE0XEQ" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
           <div class="textlabel-sdxwGy sd36">피지컬 컴퓨팅</div>
           <div class="hw-zUixHA sdmedium24">
             날샘 HW 팀에서는 아두이노와 라즈베리 파이를 이용한 수많은 프로젝트를 진행하며 다양한 센서와 <br />출력을
@@ -328,6 +334,34 @@
               <div class="x-i7hrr4 hw-little-fonts">날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘</div>
               <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
             </div>
+          </div>
+        </div>
+        <div class="group-6-C61RwL">
+          <div class="stacked-group-PIEh7b">
+            <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
+            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="bm.html"
+              ><img
+                class="x00002-6NpaO9"
+                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
+            /></a>
+            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="hw.html"
+              ><img
+                class="x00001-6NpaO9"
+                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
+            /></a>
+            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
+            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
+            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="a404.html">
+              <div class="more00000-6NpaO9">
+                <a href="a404.html" onclick="window.event.stopPropagation()"
+                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
+                /></a></div
+            ></a>
           </div>
         </div>
       </div>
